# skillbot

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Containerfile  README.md  pyproject.toml
.github/workflows/: pr.yml  release.yml
docs/: README.md  architecture.md  error-codes.md
skillbot/: __init__.py  errors.py  hello.py  strings.json  strings.py
skillbot/agents/: agent.yaml  agent_executor.py  builder.py  supervisor.py
skillbot/agents/prompts/: create-memories.prompt.md  find-skills.prompt.md  plan.prompt.md  reflect.prompt.md  summarize.prompt.md
skillbot/channels/: __init__.py  chat.py
skillbot/channels/cli/: cli.py
skillbot/channels/streamlit/: __init__.py  app.py
skillbot/cli/: __init__.py  cli.py  tui.py
skillbot/config/: __init__.py  config.py
skillbot/container/: __init__.py  manager.py
skillbot/framework/: __init__.py  agent.py  state.py
skillbot/memory/: __init__.py  memory.py
skillbot/schemas/: agent.config.schema.json  skillbot.config.schema.json
skillbot/server/: __init__.py  a2a_server.py  sqlite_task_store.py
skillbot/skills/: __init__.py  loader.py
skillbot/streamlit/: app.py
skillbot/tools/: __init__.py  container_tools.py  memory_tools.py
tasks/: 0-setup-python-repo.md  1-basic-skillbot.md  2-channels.md  3-make-cli-better.md  4-skill-execution.md  5-remove-supervisor.md  6-migrate-to-sherma.md  7-debug-skills-architecture.md  8-container-permissions-bot-level.md
tasks/assets/: skillbot-agent-loop.excalidraw
tasks/plans/: 1-basic-skillbot-agent.md
tests/: test_cli.py  test_config.py  test_hello.py  test_memory.py  test_skills.py
